--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,53 @@
-.App {
-  text-align: center;
+/* variables for when changing to frequently used colors */
+/* can apply by adding var(--colorWanted) */
+:root {
+  --mainColor: rgb(37, 34, 34);
+  --mainColorDark: #7b4108;
+  --mainColorLight: rgba(255, 69, 0, 0.1);
+  --secondaryColor: rgb(99, 81, 75);
+  --tertiaryColor: rgb(245, 245, 245);
+  --mainTextColor: rgb(175, 175, 175);
+  --secondaryTextColor: rgb(200, 200, 200);
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+.app {
+  background-color: rgb(247, 247, 247);
+  padding: 20px;
   min-height: 100vh;
+  max-width: 100vw;
+}
+
+.appDark {
+  background-color: #21273b;
+  padding: 20px;
+  min-height: 100vh;
+  max-width: 100vw;
+}
+
+/* remove default a tag styles */
+a, a:hover, a:focus, a:active {
+  text-decoration: none;
+  color: inherit;
+}
+
+/* reuseable css styles */
+.container-default {
+  /* big screen */
+  /* margin: 100px 50px; */
+  font-family: 'Montserrat', sans-serif;
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.p-default {
+  /* big size */
+  /* font-size: 20px; */
+  font-size: 14px;
+  line-height: 1.5;
+  margin: 15px 5px 25px 5px;
+  /* big screen size */
+  /* margin: 35px; */
 }
