--- a/src/Nav/Nav.css
+++ b/src/Nav/Nav.css
@@ -16,12 +16,12 @@
     /* font-size: 44px; */
     font-family: 'Titillium Web', sans-serif;
 }
-.nav-right {
-    /* mid - large screens */
-    /* padding: 0 240px; */
-}
+/* .nav-right {
+    mid - large screens
+    padding: 0 240px;
+} */
 .nav-switch {
-    margin-left: 30px;
+    margin:  0 60px 0 20px;
     border: 2px solid orangered;
     background-color: orangered;
     padding: 5px;
