--- a/src/Projects/Projects.css
+++ b/src/Projects/Projects.css
@@ -28,9 +28,9 @@
     font-size: 22px;
     font-weight: 700;
 }
-.project-container > a {
+.project-links > a {
     padding: 15px;
-    margin: 25px;
+    margin: 0px 5px 0px 0px;
     background-color: orangered;
     color: white;
     font-weight: 500;
@@ -42,7 +42,7 @@
     font-weight: 700;
     border-radius: 10px; */
 }
-.project-container > a:hover {
+.project-links > a:hover {
     transition: 0.2s ease-in-out;
     background-color: orange;
 }
@@ -56,18 +56,46 @@
     flex-wrap: wrap;
     justify-content: center;
 }
+summary {
+    margin: 20px 20px 40px 20px;
+}
 .project-skills {
     height: 50px;
     width: auto;
-    /* mid-large sizes */
-    /* width: 70px;
-    height: 70px; */
-    margin-right: 15px;
+    margin: 0 20px 50px 0;
 }
 .project-img > img{
-    /* mid-large size */
-    /* height: 50vh;
-    width: auto; */
     height: 150px;
     width: auto
+}
+@media screen and (min-width: 360px) {
+    .project-img > img{
+        height: 200px;
+        width: auto
+    }
+}
+@media screen and (min-width: 540px) {
+    .project-description {
+        padding: 25px 40px;
+    }
+    .project-links > a {
+        margin: 0px 20px 0px 20px;
+        padding: 15px 20px;
+        font-weight: 700;
+    }
+    .project-skills {
+        width: 60px;
+        height: 60px;
+    }
+    .project-img > img{
+        height: 300px;
+        width: auto
+    }
+    
+}
+@media screen and (min-width: 768px) {
+    .project-img > img{
+        height: 400px;
+        width: auto
+    }
 }
