--- a/src/App.css
+++ b/src/App.css
@@ -68,10 +68,12 @@ a, a:hover, a:focus, a:active {
 .footer__btn:hover {
   outline: none;
   background-color: orange;
+  transition: 0.3s ease-out;
 }
 
 .footer__btn:active {
   background-color: orange;
+  transition: 0.3s ease-out;
   outline: none;
 }
 /* end of arrow up styles */
@@ -87,8 +89,8 @@ a, a:hover, a:focus, a:active {
 }
 @media screen and (min-width: 768px) {
   .footer__btn {
-    height: 50px;
-    width: 50px;
+    height: 45px;
+    width: 45px;
     font-size: 42px;
     right: 35px;
     bottom: 40px;
