--- a/src/Skills/Skills.css
+++ b/src/Skills/Skills.css
@@ -30,15 +30,18 @@ border: 1px solid var(--dark-orange);
 background: rgb(220, 220, 220);
 }
 
-.skill-btn:hover {
+/* .skill-btn:hover {
 transition: 0.2s ease-in-out;
-transform: scale(1.2);
 border: 1.6px solid rgb(219, 62, 0);
 background-color: rgb(190, 190, 190);
 outline: 0;
-}
+} */
 .skill-btn:active {
-border: 1.6px solid var(--dark-orange);
+    transition: 0.3s ease-out;
+    border: 1.6px solid rgb(219, 62, 0);
+    background-color: rgb(190, 190, 190);
+    outline: 0;
+    border: 1.6px solid var(--dark-orange);
 }
 
 .btnContent > img {
