--- a/src/Home/Home.css
+++ b/src/Home/Home.css
@@ -20,9 +20,10 @@ span {
 }
 .home-slides {
     height: 60px;
+    font-size: 21px;
 }
 .home-icons-container {
-    width: 300px;
+    width: 200px;
     margin: 20px;
     display: flex;
     justify-content: space-evenly;
@@ -103,7 +104,11 @@ span {
         background-color: orangered;
     }
 }
-
+@media screen and (min-width: 360px) {
+    .home-icons-container {
+        width: 300px;
+    }
+}
 @media screen and (min-width: 412px) {
     .profile-picture-background {
         height: 92%;
