contact button border fix

--- a/src/Home/Home.css
+++ b/src/Home/Home.css
@@ -62,7 +62,7 @@ span {
     font-weight: 600;
 }
 .primary-btn {
-    border: 2px solid #111;
+    border: 3px solid #21273b;
     color: #111;
 }
 .primary-btn:hover {
