--- a/src/Home/Home.css
+++ b/src/Home/Home.css
@@ -93,6 +93,8 @@ span {
     height: 70%;
     width: 70%;
     background-image: url("../assets/profile-photo.jpg");
+    border-bottom: 2px solid orangered;
+    border-top: 2px solid orangered;
     background-size: cover;
     border-radius: 50%;
     background-repeat: no-repeat;
