--- a/src/Projects/Projects.css
+++ b/src/Projects/Projects.css
@@ -25,12 +25,13 @@
     font-weight: 700;
 }
 .project-links > a {
-    padding: 15px;
-    margin: 0px 5px 0px 0px;
+    padding: 10px 15px 5px 15px;
+    margin: 0px 10px;
+    justify-content: center;
     background-color: orangered;
     color: white;
-    font-weight: 500;
     border-radius: 10px;
+    font-size: 28px;
 }
 .project-links > a:hover {
     transition: 0.2s ease-in-out;
@@ -68,7 +69,8 @@ summary {
     }
     .project-links > a {
         margin: 0px 20px 0px 20px;
-        padding: 15px 20px;
+        padding: 12px 20px 8px 20px;
+        font-size: 32px;
         font-weight: 700;
     }
     .project-skills {
