--- a/src/Skills/Skills.css
+++ b/src/Skills/Skills.css
@@ -1,5 +1,5 @@
 .skills-container {
-    background-color: bisque;
+    background-color: var(--secondaryBgColor);
   }
 .title-container {
     display: flex;
@@ -27,19 +27,12 @@ justify-content: center;
 position: relative;
 border-radius: 50px;
 border: 1px solid var(--dark-orange);
-background: rgb(220, 220, 220);
+background: var(--tertiaryBgColor);
 }
 
-/* .skill-btn:hover {
-transition: 0.2s ease-in-out;
-border: 1.6px solid rgb(219, 62, 0);
-background-color: rgb(190, 190, 190);
-outline: 0;
-} */
 .skill-btn:active {
     transition: 0.3s ease-out;
-    border: 1.6px solid rgb(219, 62, 0);
-    background-color: rgb(190, 190, 190);
+    border: 1.6px solid var(--mainColor);
     outline: 0;
     border: 1.6px solid var(--dark-orange);
 }
@@ -59,7 +52,7 @@ height: 30px;
 width: 55px;
 font-family: "Poppins ExtraLight";
 font-size: 12px;
-color: black;
+color: var(--black);
 }
 
 @media screen and (min-width: 540px) {
@@ -85,7 +78,7 @@ color: black;
     margin: 2rem;
 }
 .skill-btn:hover {
-    border: 2px solid rgb(219, 62, 0);
+    border: 2px solid var(--mainColor);
 }
 .btnContent > img {
     width: 75px;
