--- a/src/Skills/Skills.css
+++ b/src/Skills/Skills.css
@@ -25,7 +25,7 @@ justify-content: center;
 
 .skill-btn {
 position: relative;
-margin: 0.5rem;
+margin: 0.5em;
 margin-bottom: 1rem;
 cursor: pointer;
 border-radius: 50px;
@@ -55,17 +55,21 @@ font-family: "Poppins ExtraLight";
 font-size: 12px;
 color: var(--black);
 }
-
+@media screen and (min-width: 360px) {
+    .btnContent > img {
+        width: 55px;
+        height: 55px;
+    }
+    .skill-btn {
+        margin: 0.7em;
+    }
+}
 @media screen and (min-width: 540px) {
 .skill-list {
     margin: 20px 60px;
 }
 .skills {
     gap: 0.5rem;
-}
-.btnContent > img {
-    width: 55px;
-    height: 55px;
 }
 .btnContent > p {
     font-size: 14px;
