--- a/src/Home/Home.css
+++ b/src/Home/Home.css
@@ -72,8 +72,9 @@ span {
 .primary-btn:hover {
     border: 3px solid var(--mainColor);
     background-color: var(--white);
-    color: var(--footerBg);
+    color: var(--mainColor);
     transition: 0.3s ease-out;
+    border-radius: 12px;
 }
 .highlighted-btn {
     margin: 0 0 0 10px;
@@ -81,8 +82,8 @@ span {
 }
 
 .highlighted-btn:hover {
-    background-color: var(--beige);
-    color: var(--footerBg);
+    background-color: var(--black);
+    color: var(--white);
     transition: 0.3s ease-out;
 }
 .profile-picture {
