--- a/src/App.css
+++ b/src/App.css
@@ -18,7 +18,7 @@
 .app {
   background-color: rgb(247, 247, 247);
   transition: 0.3s ease;
-  padding: 20px;
+  /* padding: 20px; */
   min-height: 100vh;
   max-width: 100vw;
 }
@@ -26,7 +26,7 @@
 /* Dark mode App styles */
 .appDark {
   background-color: var(--secondaryColor);
-  padding: 20px;
+  /* padding: 20px; */
   min-height: 100vh;
   max-width: 100vw;
   transition: 0.3s ease;
