--- a/src/Nav/Nav.css
+++ b/src/Nav/Nav.css
@@ -13,7 +13,7 @@
     font-family: 'Titillium Web', sans-serif;
 }
 .nav-right {
-    margin: 0 20px;
+    margin-left: 0px;
 }
 .nav-switch {
     margin:  0 60px 0 20px;
@@ -27,15 +27,15 @@
     transform: scale(1.3);
 }
 button > img {
-    height: 26px;
-    width: 26px;
+    height: 20px;
+    width: 20px;
 }
 @media screen and (min-width: 820px) {
     button > img {
-        height: 30px;
-        width: 30px;
+        height: 27px;
+        width: 27px;
     }
     .nav-container > h1 {
-        font-size: 46px;
+        font-size: 44px;
     }
 }
